# buckify

./: Cargo.toml
buckify/: .env  diesel.toml
buckify/entity/: Cargo.toml
buckify/entity/src/: resource.rs
buckify/master/: Cargo.toml
buckify/master/src/: main.rs
buckify/master/src/controller/fs/: create.rs
buckify/master/src/controllers/fs/: create.rs  delete.rs  read.rs
buckify/migrations/2024-08-12-200843_resource/: up.sql
buckify/slave/: Cargo.toml
buckify/slave/src/: main.rs
buckify/src/: Cargo.toml  extractors.rs  http.rs  lib.rs  models.rs  schema.rs  utils.rs
buckify/src/handlers/: fs.rs
docker/: Dockerfile.master  Dockerfile.nginx  Dockerfile.slave  docker-compose.yml
environments/: .env.local
master/: Cargo.toml
master/src/: main.rs
nginx/: nginx.conf
nginx/conf.d/: http.conf.template
nginx/conf.d/locations/: courtesy.conf.template  fs.conf.template
nginx/conf.d/servers/: buckify.conf.template  ssl-redirect.conf.template
public/: courtesy.css  courtesy.html
