[package]
name = "master"
version = "1.78.0"
rust-version = "1.78.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
base64 = "0.22.1"
buckify = { path = "../src" }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15" 
diesel = { version = "2.2.0", features = ["sqlite","chrono","serde_json"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
chrono = "0.4.38"
serde_json = "1.0.124"
