[package]
name = "buckify"
version = "1.78.0"
edition = "2021"
rust-version = "1.78.0"

[lib]
name = "buckify"
path = "lib.rs"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
diesel = { version = "2.2.0", features = ["sqlite","chrono","serde_json"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
dotenvy = "0.15"
chrono = "0.4.38"
serde_json = "1.0.124"
serde = "1.0.207"
